--- a/index.html
+++ b/index.html
@@ -13,91 +13,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200&family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" type="text/css" href="index.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="index.js"></script>
 </head>
-<style>
-    .width100p{
-        width: 100%;
-        height: 100%;
-    }
-    body{
-        width: 100%;
-        height: 500px;
-    }
-    .slide_show{
-        width: 100%;
-        height: 500px;
-        /*background: repeating-linear-gradient();*/
-        /*background: red;*/
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: relative;
-    }
-    .slide_body{
-        width: 100%;
-        height: 90%;
-        /*background: blue;*/
-        /*position: relative;*/
-    }
-    .slide{
-        width: 48%;
-        height: 100%;
-        position: relative;
-        box-shadow: 16px 2px 13px 0px rgb(0 0 0 / 20%);
-    }
-    .slide_img{
-        position: absolute;
-    }
-    .slide_img_text{
-        position: absolute;
-        background: linear-gradient(45deg, #ffffffb0, #00000038);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: white;
-    }
-    .slide_img_text h3{
-        background: black;
-        font-family: 'Roboto Mono', monospace;
-    }
-    .floatLeft{
-       /* position: absolute;
-        left: 0;*/
-        float: left;
-    }
-    .marginAuto{
-        position: relative;
-        margin: auto;
-        /*z-index: -1;*/
-    }
-    .floatRight{
-        /*position: absolute;*/
-        /*right: 0;*/
-        float: right;
-    }
-    .button_contain{
-        position: absolute;
-        width: 100%;
-        height: 40px;
-    }
-    #slide1{
-        /*background: orange;*/
-    }
-    #slide3{
-        /*background: green;*/
-    }
-    #slide2{
-        /*background: yellow;*/
-    }
-
-    button{
-
-    }
-    .buttonright{
-        float: right;
-    }
-</style>
 <body>
     <div class="slide_show">
         <div class="slide_body">
@@ -146,113 +66,5 @@
             <button class='btn btn-dark buttonright' onclick="forwardSlide()">&#10095;</button>
         </div>
     </div>
-    <script>
-
-        let slide = document.getElementsByClassName('slide')
-
-        let count = 2
-       
-
-        const forwardSlide = ()=>{
-            count = count>=slide.length?1:count+1
-            // console.log('slide'+count)
-
-            const slide1 = count>=slide.length?1:count+1
-            const slide2 = slide1>=slide.length?1:slide1+1
-            // console.log(slide1, slide2)
-
-            /** 
-             * Example Recent Display 
-             * 
-             * <div id = 'slide1' class="floatLeft slide"></div>
-               <div id = 'slide3' class="floatRight slide"></div>
-               <div id = 'slide2' class="marginAuto slide"></div> 
-               */
-
-            $(`#${'slide'+count}`).insertAfter(`#${'slide'+slide2}`)
-            $(`#${'slide'+slide1}`).insertAfter(`#${'slide'+slide2}`)
-
-
-            /** 
-             * Example of Expected output of div 
-             * 
-             * <div id = 'slide2' class="marginAuto slide"></div>
-             * <div id = 'slide1' class="floatLeft slide"></div>
-               <div id = 'slide3' class="floatRight slide"></div> 
-               */
-
-            $(`#${'slide'+count}`).removeClass('floatRight').addClass(`marginAuto`)
-            $(`#${'slide'+slide2}`).removeClass('marginAuto').addClass(`floatLeft`)
-            $(`#${'slide'+slide1}`).removeClass('floatLeft').addClass(`floatRight`)
-
-            /** 
-             * Example of Expected output of class 
-             * 
-             * <div id = 'slide2' class="floatLeft slide"></div>
-             * <div id = 'slide1' class="floatRight slide"></div>
-               <div id = 'slide3' class="marginAuto slide"></div> 
-               */
-
-            // animationtion of slideshow 
-            $(`#${'slide'+count}`).fadeOut();
-            $(`#${'slide'+count}`).fadeIn(800);
-
-            // return 'slide'+count
-        }
-
-        const backwardSlide = ()=>{
-            count = count<=1?slide.length:count-1
-            // console.log('slide'+count)
-
-            const slide1 = count<=1?slide.length:count-1
-            const slide2 = slide1<=1?slide.length:slide1-1
-            // console.log(slide2, slide1)
-
-            /** 
-             * Example Recent Display 
-             * 
-             * <div id = 'slide1' class="floatLeft slide"></div>    slide+slide1 
-               <div id = 'slide3' class="floatRight slide"></div>   slide+slide2
-               <div id = 'slide2' class="marginAuto slide"></div>   slide+count   
-               */
-            $(`#${'slide'+slide1}`).insertBefore(`#${'slide'+count}`)
-            $(`#${'slide'+slide2}`).insertBefore(`#${'slide'+count}`)
-
-            /** 
-             * Example of Expected output of div  
-             * 
-               <div id = 'slide3' class="floatRight slide"></div> slide+slide1
-               <div id = 'slide2' class="marginAuto slide"></div> slide+slide2
-               <div id = 'slide1' class="floatLeft slide"></div>  slide+count
-               */
-
-            $(`#${'slide'+count}`).removeClass('floatLeft').addClass(`marginAuto`)
-            $(`#${'slide'+slide2}`).removeClass('marginAuto').addClass(`floatRight`)
-            $(`#${'slide'+slide1}`).removeClass('floatRight').addClass(`floatLeft`)
-
-            /** 
-             * Example of Expected output of div  
-             * 
-               <div id = 'slide3' class="floatLeft slide"></div> slide+slide1
-               <div id = 'slide2' class="floatRight slide"></div> slide+slide2
-               <div id = 'slide1' class="marginAuto slide"></div>  slide+count
-               */
-
-            // anamtion of slide 
-            $(`#${'slide'+count}`).fadeOut();
-            $(`#${'slide'+count}`).fadeIn(500);
-
-
-            // return 'slide'+count
-        }
-
-
-        setInterval(forwardSlide, 10000)
-
-        $(document).ready(forwardSlide)
-        $(document).ready(backwardSlide())
-
-       
-    </script>
 </body>
 </html>
